--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@
 
                             <div class="item-folio__thumb">
                                 <a href="judge1.png" class="thumb-link" title="Danielle Strachman" data-size="360x544">
-                                    <img src="judge1@1x.jpeg"
-                                         srcset="judge1@1x.jpeg 1x, judge1@2x.jpeg 2x" alt="">
+                                    <img src="600a.png"
+                                         srcset="600a.png 1x, 1200a.png 2x" alt="">
                                 </a>
                             </div>
 
@@ -320,8 +320,8 @@
 
                             <div class="item-folio__thumb">
                                 <a href="judge2.png" class="thumb-link" title="Alok Nandan" data-size="1170x1132">
-                                    <img src="judge2@1x.jpeg"
-                                         srcset="judge2@1x.jpeg 1x, judge2@2x.jpeg 2x" alt="">
+                                    <img src="600d.png"
+                                         srcset="600d.png 1x, 1200d.png 2x" alt="">
                                 </a>
                             </div>
 
@@ -349,18 +349,18 @@
                         <div class="item-folio">
 
                             <div class="item-folio__thumb">
-                                <a href="judge3.jpg" class="thumb-link" title="Orrin Mahoney" data-size="600x750">
-                                    <img src="judge3@1x.jpeg"
-                                         srcset="judge3@1x.jpeg 1x, judge3@2x.png 2x" alt="">
+                                <a href="judge5.jpg" class="thumb-link" title="Julien Barbier" data-size="897x1200">
+                                    <img src=""
+                                         srcset="600b.png 1x, 1200b.png 2x" alt="">
                                 </a>
                             </div>
 
                             <div class="item-folio__text">
                                 <h3 class="item-folio__title">
-                                    Orrin Mahoney
+                                    Julien Barbier
                                 </h3>
                                 <p class="item-folio__cat">
-                                    Rotary District 5170 Governer
+                                    Cofounder of the Holberton School
                                 </p>
                             </div>
 
@@ -369,7 +369,7 @@
                             </a>
 
                             <div class="item-folio__caption">
-                                <p>Orrin Mahoney - Orrin Mahoney is the Rotary District 5170 Governor. His theme for his year as District Governor: Rotary: Building Lifelong Friendships while Making a Difference. Orrin Mahoney is a resident of Cupertino, California. He graduated from Carnegie-Mellon University in 1967 and received a Master’s degree from Stanford University. After a 35 year management career at HP, he retired and devoted his time to community activities. He is a former member of the Cupertino City Council, and has served twice as the Mayor of Cupertino. He is an active member and past president of the Rotary Club of Cupertino.</p>
+                                <p>Julien Barbier - Julien Barbier is a cofounder of Holberton School. After working on countless startups and working with aspiring software engineers all over the world, Julien noticed that even after years of studying and thousands of dollars spent, students were still not able to acquire all the skills required to be seen by companies. He began Holberton School with Sylvain Kalache in 2016 and since then graduates have found jobs at top companies such as Facebook, Google, and Apple. Julien has attended Paris Diderot University as well as the European Institute of Technology for Biochemistry and Computer Science respectively.</p>
                             </div>
 
                         </div>
@@ -380,8 +380,8 @@
 
                             <div class="item-folio__thumb">
                                 <a href="judge4.png" class="thumb-link" title="TBD" data-size="1080x1532">
-                                    <img src="judge4@1x.jpeg"
-                                         srcset="judge4@1x.jpeg 1x, judge4@2x.jpeg 2x" alt="">
+                                    <img src="600c.png"
+                                         srcset="600c.png 1x, 1200c.png 2x" alt="">
                                 </a>
                             </div>
 
