--- a/index.html
+++ b/index.html
@@ -426,12 +426,12 @@
             
             <div style="text-align:center;">
               <button id="button3456" class="smoothscroll btn btn--stroke2">
-                <a href="google.com" >Prizes</a></button>
+                <a href="https://drive.google.com/open?id=199fvXPAF84-WnzgSG2Zc9wy25rBlRNbFJf2Ty7JD3vI" >Prizes</a></button>
               </div>
 
               <script type="text/javascript">
     document.getElementById("button3456").onclick = function () {
-        location.href = "google.com";
+        location.href = "https://drive.google.com/open?id=199fvXPAF84-WnzgSG2Zc9wy25rBlRNbFJf2Ty7JD3vI";
     };
 </script>
 
